Fixed general responsive spacing on home page.

--- a/src/style.css
+++ b/src/style.css
@@ -41,10 +41,7 @@ p {
     text-decoration: none;
 }
 
-.row {
-    margin:50px auto !important;
-    padding: 20px !important;
-}
+
 
 .bg-bgprim {
     background: var(--primary-color);
@@ -55,7 +52,8 @@ p {
 }
 
 .container-lg {
-    margin: 90px auto;
+    padding: 20px !important;
+    padding-top: 90px !important;
 }
 
 .navigation-links {
